--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("C:/Users/karen/Desktop/projeto_materia/_img/background2.jpg");
+	background-image: url("../_img/background2.jpg");
 	margin: 20px;
 	background-color: #f0f8ff;
 	border: thin solid;
